--- a/configure.in
+++ b/configure.in
@@ -68,7 +68,8 @@ AC_PROG_RANLIB
 dnl for libuu
 AC_CHECK_HEADERS([errno.h fcntl.h])
 
-IT_PROG_INTLTOOL([0.35.5],[no-xml])
+IT_PROG_INTLTOOL([0.35.5])
+dnl ,[no-xml])
 GETTEXT_PACKAGE=pan
 AC_SUBST(GETTEXT_PACKAGE)
 AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[Gettext package])
